TDL-12 Make some tweaks to align the style with Figma and ensure consistency e.g. introduce the correct font

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Gelasio, sans-serif;
 }
 
 input:not([type="checkbox"]), button{
@@ -34,7 +34,7 @@ section{
     /* max-width: 700px; */
 }
 
-h1, h2{
+h1{
     margin-bottom: 1rem;
     color: white;
     font-size: 2.3rem;
@@ -42,16 +42,16 @@ h1, h2{
 
 .logo{
     width: 250px;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .createTask input[type=text]{
     display: block;
     width: 100%;
-    padding: 1rem 1.5rem;
-    background-color: aliceblue;
+    padding: 1.25rem;
+    background-color: white;
     border-radius: 0.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .createTask input[type=submit]{
@@ -60,7 +60,7 @@ h1, h2{
     padding: 1rem 1.5rem;
     background-color: rgb(131, 106, 184);
     border-radius: 0.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
     color: white;
     cursor: pointer;
     transition: 0.2s ease-in-out;
@@ -86,11 +86,11 @@ h1, h2{
 }
 
 .todoItem .taskContent{
-    flex: 1 1 0%;
+    flex: 0%;
 }
 
 .todoItem .taskContent input{
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .todoItem .taskActions{
@@ -110,11 +110,11 @@ h1, h2{
     opacity:0.75;
 }
 
-.todoItem .taskActions .edit{
+/* .todoItem .taskActions .edit{
     margin-right: 0.5rem;
     background-color: rgb(131, 106, 184);
     color: white;
-}
+} */
 
 .todoItem .taskActions .delete{
     background-color: rgb(231, 63, 33);
